# YouTube-view-analysis

./: .env-example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
YouTubeDataSchema/: schema.yaml
model_registry/ml/feature_impact_model/: rf_model.pkl  shap_explainer.pkl  shap_values.csv
training/data_preparation/components/: data_ingetion.py  data_transformation.py  data_validation.py
training/data_preparation/constants/: __init__.py
training/data_preparation/entity/: artifact_entity.py  config_entity.py
training/data_preparation/pipeline/: preparation_pipeline.py
training/exception/: exception.py
training/logging/: logger.py
training/ml/ML_DataSchema/: schema.yaml
training/ml/components/: data_ingetion.py
training/ml/constants/: __init__.py
training/ml/model_components/feature_impact/components/: data_ingestion.py  data_transformation.py  data_validation.py  feature_impact_pipeline.py  model_trainer.py
training/ml/model_components/feature_impact/entity/: artifact_entity.py  config_entity.py
training/ml/model_components/feature_impact/pipeline/: feature_impact_pipeline.py
training/utils/: util.py
