[project]
name = "youtube-view-analysis"
version = "0.1.0"
description = "API for model building"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "pandas>=2.3.3",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
    "certifi>=2026.1.4",
    "pymongo>=4.16.0",
    "pyarrow>=23.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*"]

