[project]
name = "youtube-view-analysis"
version = "0.1.0"
description = "API for model building"
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "pandas>=2.3.3",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
    "certifi>=2026.1.4",
    "pymongo>=4.16.0",
    "pyarrow>=23.0.0",
    "dagshub>=0.6.6",
    "mlflow>=1.27.0",
    "protobuf==3.20.3",
    "shap>=0.49.1",
    "setuptools==68.2.2",
    "wheel>=0.46.3",
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*"]

